--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -21,6 +21,41 @@
     </header>
     <div class="container mt-5 mb-5">
         <div class="row">
+            <h3>Alain par son papa...</h3>
+            <p class="text-justify mt-2">Lorsque nous nous sommes mis à la recherche d'informations pour compléter cette partie du site Internet,
+            nous sommes tombés sur un texte de Claude, le papa d'Alain. Ecrit en mai 1961, il nous donne quelques précisions
+            sur le chérubin : <br><br>
+            <i>"Cher fils, <br>
+                Nous nous sommes promis maintes fois de commencer ici le récit de tes loufoqueries, et chaque fois nous attendions
+                d'avoir un peu plus de recul pour juger quelles espiégleries mériteraient qu'on les consigne et quelles catastrophes
+                il valait mieux taire. <br>
+                Voici donc écrit à posteriori le résumé de tes aventures passées.
+                [...] <br>
+                Il faut noter tout de même pour la postérité qu'en juillet 60, alors que tu faisais une sérieuse coqueluche
+                à l'âge de 3 mois, tu as fais ton baptême de l'air par un vol de 2h à 3600m d'altitude en compagnie d'un
+                docteur pilote et de papa. Evidemment, tu ne t'en souviens plus mais à la descente, tu marmonnais des
+                "brmmm, brmmm" pour expliquer tes sensations.
+                [...] <br>
+                Récemment, tu fis ta première crise de foie pour avoir englouti à l'improviste 150 grammes de beurre, sacré
+                vorace !"</i></p>
+        </div>
+        <div class="row">
+            <h3>... puis Alain par Alain</h3>
+            <p class="text-justify mt-2">Vient ensuite un complément de la part d'Alain lui-même, alors âgé de 17 ans :
+                <br><br>
+            <i>"Je me souviens assez bien d'avoir aimé l'eau et le feu. L'eau car ma mère me remplissait le lavabo, me mettais
+            une chaise sur laquelle je me tenais debout les deux mains faisant trempette, m'amusant à remplir et vider
+            successivement des récipients. Pendant que je m'amusais, je foutais la paix à mes parents et surtout je ne
+            faisais pas de bêtises car des bêtises j'en ai faites... Le feu : car chez ma grand-mère (Grand maman) me
+            donnait un moule à tarte dans lequel j'allumais du papier et je ne me lassais jamais de regarder le bout
+            de papier se consummer. C'était là encore un moyen (dangereux certes) mais efficace pour que je me tienne
+            tranquille. En lisant ces quelques lignes, on pourrait penser que j'étais un "emmerdeur public". Je ne
+            pense pas. Un peu turbulent et nerveux, c'est tout.</i>
+            </p>
+        </div>
+    </div>
+    <div class="container mt-5 mb-5">
+        <div class="row">
             <div class="col-md-6 offset-md-3">
                 <ul class="timeline">
                     <li>
