--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,9 @@
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path('home') }}">Accueil</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path('about') }}">A propos d'Alain</a>
                     </li>
                     <li class="nav-item">
@@ -29,7 +32,7 @@
                         <a class="nav-link" href="{{ path('users') }}">Les contributeurs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">A propos</a>
+                        <a class="nav-link" href="{{ path('general_about') }}">A propos</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
