Ajout photo About

--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -19,6 +19,12 @@
             </div>
         </div>
     </header>
+
+    <div class="row text-center">
+        <div class="col-6"><img src="{{ asset('assets/images/collages/Collage_Fotor.jpg') }}" class="img-fluid" alt="Responsive image"></div>
+        <div class="col-6"><img src="{{ asset('assets/images/collages/Collage_Fotor2.jpg') }}" class="img-fluid" alt="Responsive image"></div>
+    </div>
+
     <div class="container mt-5 mb-5">
         <div class="row">
             <h3>Alain par son papa...</h3>
@@ -54,6 +60,11 @@
             </p>
         </div>
     </div>
+
+    <div class="row text-center">
+        <div class="col-12"><img src="{{ asset('assets/images/collages/Collage_Fotor3.jpg') }}" class="img-fluid" alt="Responsive image"></div>
+    </div>
+
     <div class="container mt-5 mb-5">
         <div class="row">
             <div class="col-md-6 offset-md-3">
@@ -76,5 +87,10 @@
                 </ul>
             </div>
         </div>
+    </div>
+
+    <div class="row text-center">
+        <div class="col-6"><img src="{{ asset('assets/images/collages/Collage_Fotor5.jpg') }}" class="img-fluid" alt="Responsive image"></div>
+        <div class="col-6"><img src="{{ asset('assets/images/collages/Collage_Fotor6.jpg') }}" class="img-fluid" alt="Responsive image"></div>
     </div>
 {% endblock %}
