--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -24,7 +24,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-sm-12">
                 <div class="d-flex userName">
                     <h3>{{ user.firstName }} {{ user.lastName }}</h3>
                 </div>
