--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -23,7 +23,7 @@
     <section class="need bg-primary" id="about">
         <div class="container">
             <div class="row my-5">
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <div class="card">
                         <div class="card-header">
                             <h2 class="section-heading text-center">Le projet</h2>
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <div class="card">
                         <div class="card-header">
                             <h2 class="section-heading text-center">Comment ?</h2>
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <div class="card">
                         <div class="card-header">
                             <h2 class="section-heading text-center">Et après ?</h2>
