--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -70,19 +70,99 @@
             <div class="col-md-6 offset-md-3">
                 <ul class="timeline">
                     <li>
-                        <a target="_blank" href="https://www.totoprayogo.com/#">Naissance d'Alain</a>
+                        <a target="_blank" href="https://www.totoprayogo.com/#">Naissance</a>
                         <a href="#" class="float-right">25 Mars 1960</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis mollis. Duis sagittis ligula in sodales vehicula....</p>
+                        <p class="text-justify">
+                            C'est un vendredi, jour de l'Annonciation (ça ne s'invente pas), qu'Alain voit le jour à
+                            Strasbourg. Jouflu, sans dents, un peu moins de cheveux qu'aujourd'hui, c'est un beau bébé !
+                        </p>
                     </li>
                     <li>
-                        <a href="#">Evenement 2</a>
-                        <a href="#" class="float-right">Date</a>
-                        <p>Curabitur purus sem, malesuada eu luctus eget, suscipit sed turpis. Nam pellentesque felis vitae justo accumsan, sed semper nisi sollicitudin...</p>
+                        <a href="#">Communion</a>
+                        <a href="#" class="float-right">1974</a>
+                        <p class="text-justify">
+                            Alain, alors âgé de 14 ans, fait sa communion pour noyer le poisson. Nous ne sommes pas dupes :
+                            ce n'est pas parce qu'il peut désormais être enfant de coeur qu'il n'en reste pas moins
+                            "turbulent et nerveux" (selon ses dires).
+                        </p>
                     </li>
                     <li>
-                        <a href="#">Evenement 3</a>
-                        <a href="#" class="float-right">Date</a>
-                        <p>Fusce ullamcorper ligula sit amet quam accumsan aliquet. Sed nulla odio, tincidunt vitae nunc vitae, mollis pharetra velit. Sed nec tempor nibh...</p>
+                        <a href="#">Déménagement à Olivet</a>
+                        <a href="#" class="float-right">1975</a>
+                        <p class="text-justify">
+                            C'est dans le Loiret que notre Alsacien va vivre son adolescence et, on s'en doute bien, enchaîner
+                            les bêtises au doux son de Abba, John Lennon, Pink Floyd, Bob Marley et compagnie. C'est à
+                            cette époque qu'il rencontre Olav, Hugues, Jean-Marie et tous les autres.
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">Rencontre avec Valérie</a>
+                        <a href="#" class="float-right">1984</a>
+                        <p class="text-justify">
+                            Si vous êtes un scénariste d'Holywood, n'hésitez pas à nous contacter car cette histoire, beaucoup
+                            trop complexe pour être résumée, ferait un très beau film romantique. Pour le casting, Marie
+                            propose Hugh Grant jeune dans le rôle d'Alain (il paraît qu'elle trouve qu'il lui ressemble).
+                            <br>
+                            En gros : ils se rencontrèrent, ce fut le coup de foudre et *SPOILER ALERT* ils se marièrent et
+                            eurent beaucoup d'enfants.
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">Mariage avec Valérie</a>
+                        <a href="#" class="float-right">06-07 Juin 1986</a>
+                        <p class="text-justify">
+                            C'est au cours de ce week-end qu'Alain et Valérie se disent oui pour la vie. C'est d'abord
+                            la chouille avec les copains, le 06 juin ; mais pas trop, car il faut avoir l'air frais pour
+                            célébrer le mariage avec toute la famille. Ce mariage est suivi d'un superbe voyage de noces
+                            en Corse, à partir du 19 Juin.
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">Naissance de Lauriane</a>
+                        <a href="#" class="float-right">16 Mars 1987</a>
+                        <p class="text-justify">
+                            C'est à la clinique Adassa de Strasbourg, le même endroit où les quatre murs de l'établissement
+                            ont eu l'honneur d'entendre, pour la première fois, les cris d'Alain presque 27 ans auparavant,
+                            que Lauriane voit le jour. Alain et Valérie nagent dans le bonheur avec leur petit "poisson".
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">Naissance de Pierrick et Manon</a>
+                        <a href="#" class="float-right">15 Janvier 1989</a>
+                        <p class="text-justify">
+                            La légende veut qu'en apprenant que la famille allait presque doubler du jour au
+                            lendemain, Alain aurait été bien heureux de pouvoir se tenir à une étagère dans le cabinet du
+                            gynécologue. Quelques mois plus tard, remis de leurs émotions, Alain, Valérie et Lauriane accueillent
+                            Pierrick et Manon.
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">Naissance de Marie</a>
+                        <a href="#" class="float-right">10 Décembre 1992</a>
+                        <p class="text-justify">
+                            Pour mettre un peu de bruit dans l'appartement de Lampertheim dans lequel la joyeuse troupe
+                            venait d'emménager, Marie, dernière de la tribu, pointa le bout de son nez.
+                        </p>
+                    </li>
+                    <li>
+                        <a href="#">Mariage de Lauriane et Steve</a>
+                        <a href="#" class="float-right">09 Juin 2012</a>
+                    </li>
+                    <li>
+                        <a href="#">Naissance de Nolan</a>
+                        <a href="#" class="float-right">27 Juin 2013</a>
+                    </li>
+                    <li>
+                        <a href="#">Naissance de Lena</a>
+                        <a href="#" class="float-right">01 Février 2016</a>
+                    </li>
+                    <li>
+                        <a href="#">Mariage de Marie et Benjamin</a>
+                        <a href="#" class="float-right">28 Juillet 2018</a>
+                    </li>
+                    <li>
+                        <a href="#">Enfin la retraite !</a>
+                        <a href="#" class="float-right">Mai 2020</a>
                     </li>
                 </ul>
             </div>
