--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -113,7 +113,7 @@
                         <p class="text-justify">
                             C'est au cours de ce week-end qu'Alain et Valérie se disent oui pour la vie. C'est d'abord
                             la chouille avec les copains, le 06 juin ; mais pas trop, car il faut avoir l'air frais pour
-                            célébrer le mariage avec toute la famille. Ce mariage est suivi d'un superbe voyage de noces
+                            célébrer le mariage avec toute la famille le lendemain. Ce mariage est suivi d'un superbe voyage de noces
                             en Corse, à partir du 19 Juin.
                         </p>
                     </li>
@@ -147,6 +147,11 @@
                     <li>
                         <a href="#">Mariage de Lauriane et Steve</a>
                         <a href="#" class="float-right">09 Juin 2012</a>
+                        <p>Le jour où Alain a mené son aîné jusqu'à l'autel, on ne peut qu'imaginer le coup de vieux !
+                            Heureusement, Lauriane et Steve avaient tout prévu : pour le maintenir en forme, rien de mieux
+                            qu'acheter une maison juste en face de chez Valérie et lui, avec des travaux. De quoi l'occuper
+                            pendant quelques mois !
+                        </p>
                     </li>
                     <li>
                         <a href="#">Naissance de Nolan</a>
@@ -155,6 +160,10 @@
                     <li>
                         <a href="#">Naissance de Lena</a>
                         <a href="#" class="float-right">01 Février 2016</a>
+                        <p>C'est bien beau tout ça, mais Alain commençait à s'ennuyer en attendant la retraite. Heureusement,
+                            Lauriane et Steve ont pensé à tout : un deuxième enfant, ! Chouette, il va falloir aménager le
+                            grenier de leur maison pour y faire une chambre à Nolan et Lena.
+                        </p>
                     </li>
                     <li>
                         <a href="#">Mariage de Marie et Benjamin</a>
