--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -156,6 +156,10 @@
                     <li>
                         <a href="#">Naissance de Nolan</a>
                         <a href="#" class="float-right">27 Juin 2013</a>
+                        <p>C'est après un long travail de 19h pour Lauriane qu'Alain devient Papi pour la première
+                            fois. Par ses rires (et ses pleurs), Nolan est venu redonner de la vie (et du désordre aussi)
+                            au nid familial, vidé au fur et à mesure par l'envol des 4 enfants.
+                        </p>
                     </li>
                     <li>
                         <a href="#">Naissance de Lena</a>
