--- a/templates/about/cgu.html.twig
+++ b/templates/about/cgu.html.twig
@@ -35,9 +35,8 @@
         </p>
         <h4>Article 2 : l'Hebergeur</h4>
         <p>
-            L'hébergeur de ce site est la Société ......., dont le siège social est situé au ........, avec le numéro de
-            téléphone : ...........
-        </p>
+            L'hébergeur de ce site est la Société IONOS, dont le siège social est situé au 7 Place de la Gare 57200 Sarreguemines, avec le numéro de
+            téléphone 09 70 80 89 11
         <h4>Article 3 : accès au site</h4>
         <p>
             Le site est accessible par tout endroit, 7j/7, 24h/24 sauf cas de force majeure, interruption programmée ou
