--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -67,11 +67,11 @@
 
     <div class="container mt-5 mb-5">
         <div class="row">
-            <div class="col-md-6 offset-md-3">
+            <div class="col-md-8 offset-md-2">
                 <ul class="timeline">
                     <li>
                         <a target="_blank" href="https://www.totoprayogo.com/#">Naissance</a>
-                        <a href="#" class="float-right">25 Mars 1960</a>
+                        <a href="#" class="float-right">25.03.1960</a>
                         <p class="text-justify">
                             C'est un vendredi, jour de l'Annonciation (ça ne s'invente pas), qu'Alain voit le jour à
                             Strasbourg. Jouflu, sans dents, un peu moins de cheveux qu'aujourd'hui, c'est un beau bébé !
@@ -109,7 +109,7 @@
                     </li>
                     <li>
                         <a href="#">Mariage avec Valérie</a>
-                        <a href="#" class="float-right">06-07 Juin 1986</a>
+                        <a href="#" class="float-right">06-07.06.1986</a>
                         <p class="text-justify">
                             C'est au cours de ce week-end qu'Alain et Valérie se disent oui pour la vie. C'est d'abord
                             la chouille avec les copains, le 06 juin ; mais pas trop, car il faut avoir l'air frais pour
@@ -119,7 +119,7 @@
                     </li>
                     <li>
                         <a href="#">Naissance de Lauriane</a>
-                        <a href="#" class="float-right">16 Mars 1987</a>
+                        <a href="#" class="float-right">16.03.1987</a>
                         <p class="text-justify">
                             C'est à la clinique Adassa de Strasbourg, le même endroit où les quatre murs de l'établissement
                             ont eu l'honneur d'entendre, pour la première fois, les cris d'Alain presque 27 ans auparavant,
@@ -127,8 +127,8 @@
                         </p>
                     </li>
                     <li>
-                        <a href="#">Naissance de Pierrick et Manon</a>
-                        <a href="#" class="float-right">15 Janvier 1989</a>
+                        <a href="#">Naissance de Pierrick & Manon</a>
+                        <a href="#" class="float-right">15.01.1989</a>
                         <p class="text-justify">
                             La légende veut qu'en apprenant que la famille allait presque doubler du jour au
                             lendemain, Alain aurait été bien heureux de pouvoir se tenir à une étagère dans le cabinet du
@@ -138,7 +138,7 @@
                     </li>
                     <li>
                         <a href="#">Naissance de Marie</a>
-                        <a href="#" class="float-right">10 Décembre 1992</a>
+                        <a href="#" class="float-right">10.12.1992</a>
                         <p class="text-justify">
                             Pour mettre un peu de bruit dans l'appartement de Lampertheim dans lequel la joyeuse troupe
                             venait d'emménager, Marie, dernière de la tribu, pointa le bout de son nez.
@@ -146,7 +146,7 @@
                     </li>
                     <li>
                         <a href="#">Mariage de Lauriane et Steve</a>
-                        <a href="#" class="float-right">09 Juin 2012</a>
+                        <a href="#" class="float-right">09.06.2012</a>
                         <p>Le jour où Alain a mené son aîné jusqu'à l'autel, on ne peut qu'imaginer le coup de vieux !
                             Heureusement, Lauriane et Steve avaient tout prévu : pour le maintenir en forme, rien de mieux
                             qu'acheter une maison juste en face de chez Valérie et lui, avec des travaux. De quoi l'occuper
@@ -155,7 +155,7 @@
                     </li>
                     <li>
                         <a href="#">Naissance de Nolan</a>
-                        <a href="#" class="float-right">27 Juin 2013</a>
+                        <a href="#" class="float-right">27.06.2013</a>
                         <p>C'est après un long travail de 19h pour Lauriane qu'Alain devient Papi pour la première
                             fois. Par ses rires (et ses pleurs), Nolan est venu redonner de la vie (et du désordre aussi)
                             au nid familial, vidé au fur et à mesure par l'envol des 4 enfants.
@@ -163,7 +163,7 @@
                     </li>
                     <li>
                         <a href="#">Naissance de Lena</a>
-                        <a href="#" class="float-right">01 Février 2016</a>
+                        <a href="#" class="float-right">01.02.2016</a>
                         <p>C'est bien beau tout ça, mais Alain commençait à s'ennuyer en attendant la retraite. Heureusement,
                             Lauriane et Steve ont pensé à tout : un deuxième enfant, ! Chouette, il va falloir aménager le
                             grenier de leur maison pour y faire une chambre à Nolan et Lena.
@@ -171,7 +171,7 @@
                     </li>
                     <li>
                         <a href="#">Mariage de Marie et Benjamin</a>
-                        <a href="#" class="float-right">28 Juillet 2018</a>
+                        <a href="#" class="float-right">28.07.2018</a>
                     </li>
                     <li>
                         <a href="#">Enfin la retraite !</a>
