--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,8 +49,10 @@
                             <a href="{{ path('settings') }}" class="dropdown-item">Paramètres</a>
                             <a href="{{ path('user_memories') }}" class="dropdown-item">Mes souvenirs</a>
                             <a href="{{ path('memory_creation') }}" class="dropdown-item">Partager un souvenir</a>
+                            {% if "ROLE_ADMIN" in app.user.roles %}
                             <div class="dropdown-divider"></div>
                             <a href="{{ path('admin') }}" class="dropdown-item">Espace admin</a>
+                            {% endif %}
                             <div class="dropdown-divider"></div>
                             <a href="{{ path('app_logout') }}" class="dropdown-item">Se déconnecter</a>
                         </div>
