--- a/templates/memory/index.html.twig
+++ b/templates/memory/index.html.twig
@@ -44,6 +44,44 @@
                 </div>
             {% endfor %}
         </div>
+        <table id="table_memory" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+            <tr>
+                <td>Contributeur</td>
+                <td>Souvenir</td>
+            </tr>
+            </thead>
+            <tbody>
+            {% for memory in memories %}
+                <tr>
+                    <td value="{{ memory.id }}" class="contributeur">
+                        <div class="d-flex justify-content-around h-100 align-items-center">{{ memory.user.firstName }} {{ memory.user.lastName }}</div>
+                    </td>
+                    <td value="{{ memory.id }}" class="memory">
+                        <div class="d-flex justify-content-around h-100 align-items-center">{{ memory.title|default('Pas de titre') }}</div>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
 
+{% endblock %}
+
+{% block javascripts %}
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.18/js/dataTables.bootstrap4.min.js"></script>
+    <script>
+        $(document).ready( function () {
+            $('#table_memory').DataTable();
+        } );
+        $('tbody td:not(.status)').click(function () {
+            let id = $(this).attr('value');
+            window.location.href="/souvenir/"+id;
+        });
+        $('.contributeur, .memory').hover(function () {
+            $(this).toggleClass('bg-light');
+            $(this).siblings().not('.status').toggleClass('bg-light');
+        })
+    </script>
 {% endblock %}
